feat: request obj struct added for swagger form data inputs. valid swagger file generated.
